crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__import_stmt-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    body: [
        Import(
            Module {
                path: [
                    "module",
                ],
                alias: Some(
                    "temp",
                ),
            },
        ),
        Import(
            Symbols {
                path: [
                    "module",
                ],
                symbols: [
                    ImportSymbol {
                        name: "z",
                        alias: Some(
                            "temp",
                        ),
                    },
                ],
            },
        ),
        Import(
            Symbols {
                path: [
                    "module",
                ],
                symbols: [
                    ImportSymbol {
                        name: "x",
                        alias: Some(
                            "temp",
                        ),
                    },
                    ImportSymbol {
                        name: "y",
                        alias: Some(
                            "temp",
                        ),
                    },
                    ImportSymbol {
                        name: "z",
                        alias: Some(
                            "temp",
                        ),
                    },
                ],
            },
        ),
        Import(
            Module {
                path: [
                    "module",
                    "nested",
                ],
                alias: Some(
                    "temp",
                ),
            },
        ),
        Import(
            Symbols {
                path: [
                    "module",
                    "nested",
                ],
                symbols: [
                    ImportSymbol {
                        name: "z",
                        alias: Some(
                            "temp",
                        ),
                    },
                ],
            },
        ),
        Import(
            Symbols {
                path: [
                    "module",
                    "nested",
                ],
                symbols: [
                    ImportSymbol {
                        name: "x",
                        alias: Some(
                            "temp",
                        ),
                    },
                    ImportSymbol {
                        name: "y",
                        alias: Some(
                            "temp",
                        ),
                    },
                    ImportSymbol {
                        name: "z",
                        alias: Some(
                            "temp",
                        ),
                    },
                ],
            },
        ),
    ],
}
