crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__meta_methods-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: meta methods may only appear in classes
[34m>[0m code:1
[34m|[0m 
[34m|[0m fn [31;4mmeta[0m:test(): pass
[34m|[0m 


