crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__meta_methods-4.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: duplicate meta method `str`
[34m>[0m code:3
[34m|[0m 
[34m|[0m   fn meta:[31;4mstr[0m(self): pass
[34m|[0m 


