crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__meta_methods-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: meta methods must take `self`
[34m>[0m code:2
[34m|[0m 
[34m|[0m   fn [31;4mmeta:str[0m(): pass
[34m|[0m 


